# retina-scan-ai

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dashboard.txt  requirements.txt
.streamlit/: config.toml
access/: README.md  mfa-policy.md  oidc_integration.py  roles.py
api/: main.py  schemas.py
app/: __init__.py  main.py
architecture/: blueprint.json
audit/: README.md  logger.py  retention_policy.md  search_tools.py
clinical_ui/: README.md  design-rationale.md  mockup.html
compliance/: README.md  fda-samd-considerations.md  gdpr-dpia.md  hipaa-mapping.md  mdr-ce-considerations.md  phi-handling.md
dashboard/: app.py
data/: clinical_case_pack.json  quality_scenarios.json  release_checks.json  validation_cases.json
dicom/: README.md  anonymizer.py  audit_logger.py  gsps_generator.py  scp_listener.py
docs/: BUSINESS_OPERATIONS.md  COMMERCIALIZATION_INDEX.md  DEPLOYMENT_ACTIVATION.md  PAYMENTS_AND_REFUNDS_DRAFT.md  PRIVACY_POLICY_DRAFT.md  REVENUE_READINESS.md  architecture-evidence-map.md  architecture-pack.md  cloud-ai-architecture.md  commercial-offer.md  conversion-ux-model.md  deployment.md  enterprise-readiness.md  model-card.md  monetization-playbook.md  openrouter-routing.md  product-operating-model.md  quality-gate.md  revenue-architecture.md  revenue-growth-model.md  reviewer-evidence-map.md  risk-register.md  search-growth-implementation.md  service-architecture.md  service-growth-model.md  service-launch-playbook.md  service-offer.json  service-package.md  system-architecture.md  technical-review-pack.md  validation-plan.md
evals/: generate_validation_artifacts.py
governance/: bias-and-limitations.md  datasheet.md  explainability-design.md  fairness-evaluation.md  model-card.md
risk/: README.md  fmea.md  iso14971-mapping.md  known-limitations.md
scripts/: download_data.py
site/: index.html  llms.txt  robots.txt  sitemap.xml
src/: config.py  dataset.py  evaluate.py  gradcam.py  inference.py  model.py  train.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_chatbot.py  test_classifier.py  test_dataset.py  test_model.py  (+9 more)
(+37 files in other folders)
