[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "retina-scan-ai"
version = "0.1.0"
description = "Retinal disease detection AI system for clinical screening"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "opencv-python-headless>=4.9.0",
    "Pillow>=10.3.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "streamlit>=1.35.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "dashboard*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "SIM117", "UP007"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ANN"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "dashboard/*"]
